Added link to homepage on posts.

--- a/_posts/2014-03-23-new-blog.md
+++ b/_posts/2014-03-23-new-blog.md
@@ -3,4 +3,4 @@ layout: post
 title: New Blog
 ---
 
-I decided to create this blog to keep track of the things I work on. 
+I decided to create this blog to keep track of the things I work on. Hopefully I'll post here every day.  
